<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detail"
            type="com.sample.zomatodemo.data.response.detail.RestaurantDetail" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/colorItemBackground"
        tools:context=".ui.detail.DetailFragment"
        android:focusable="true">

        <ImageView
            android:id="@+id/detail_thumb"
            android:layout_width="@dimen/detail_page_width_image"
            android:layout_height="@dimen/detail_page_height_image"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/margin_30"
            android:src="@drawable/ic_action_restuarant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImage="@{detail.thumb}"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:contentDescription="@null"
            android:includeFontPadding="false"
            android:textColor="@color/colorText"
            android:text="@{detail.name}"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_thumb" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_15"
            android:contentDescription="@null"
            android:includeFontPadding="false"
            android:text="@{detail.cityName}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" />

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3dp"
            android:contentDescription="@null"
            android:textSize="@dimen/text_size_15"
            android:includeFontPadding="false"
            android:textColor="@color/colorText"
            android:text="@{detail.userRating.rating}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_location" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_zomato"
            android:id="@+id/btn_order"
            android:padding="@dimen/margin_5dp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/btn_rounded_corner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_rating" />

        <ProgressBar
            android:id="@+id/progress_circular"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>